# Maze-Solver

./: CMakeLists.txt  README.md
include/: Map.hpp  Screen.hpp  Tile.hpp
include/solvers/: Astar.hpp  Dijkstra.hpp
maps/: maze1.map  maze10.map  maze11.map  maze12.map  maze2.map  maze3.map  maze4.map  maze5.map  maze6.map  maze7.map  maze8.map  maze9.map
src/: Map.cpp  Screen.cpp  main.cpp  mapBuilder.cpp
src/solvers/: Astar.cpp  Dijkstra.cpp
